...
  Widget build(BuildContext context) {
    final budgetStore = StoreProvider.of(context).budgetStore;

    return Scaffold(
      appBar: CustomAppBar(
        isBackButtonVisible: false,
        title: 'Orçamentos',
        actions: [
          GestureDetector(
            onTap: () {
              Navigator.push(
                context,
                MaterialPageRoute(
...
